--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Tarefa1 -->
+    <script src="./src/scripts/tarefa1/database.js" defer ></script>
+    <script type="module" src="./src/scripts/tarefa1/index.js" defer ></script>
+
+    <!-- Tarefa2 -->
+    <script src="./src/scripts/tarefa2/databese.js" defer></script>
+    <script src="./src/scripts/tarefa2/index.js" defer type="module"></script>
+    
+    <!-- Tarefa3 -->
+    <script src="./src/scripts/tarefa3/database.js" defer type="module"></script>
+    <script src="./src/scripts/tarefa3/index.js" defer type="module"></script>
+
     <title>Exercitando ES6</title>
+   
   </head>
   <body>
     <h1>Exercitando ES6</h1>
   </body>
+ 
 </html>
